# ------------

./: CMakeLists.txt  resources.qrc  run.bash  run.bat  towns.txt  ПЕРЕСБОРКА И ЗАПУСК
src/: main.cpp  mainwindow.cpp  mainwindow.h  my_window.ui
ui/: my_window.ui
